# docs-slide-more

./: .gitignore  .pre-commit-config.yaml  README.md  docs-slide-more.code-workspace  index.html  main.py  pyproject.toml  temp.py
.github/workflows/: build.yml
latex/: .gitignore  doc.tex  main.tex
latex/contents/: Cam_on.tex  Tieu_de.tex
python/: disable_dev.py  format_latex.py  plantuml_to_png.py  upload_to_drive.py
